--- a/contribution/lang/ja.json
+++ b/contribution/lang/ja.json
@@ -2499,7 +2499,7 @@
  	 	 	"eng": "not tradable"
  	 	},
  	 	"amount": {
- 	 	 	"trans": "総量",
+ 	 	 	"trans": "所持数",
  	 	 	"eng": "amount"
  	 	},
  	 	"itemUpgradeCapacity": {
@@ -4930,7 +4930,7 @@
  	 	 	 	"eng": "CyberTunnel VPN"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "ビッグブラザーの監視が心配? \r\n         インカメラが常にハッキングされて傍受されている? \r\n         ぜひともCyber Tunnel VPNで電脳を保護・暗号化してください! \r\n        \r\n         使用すると,1時間チャットエクスプロイトを無視します.",
+ 	 	 	 	"trans": "ビッグブラザーの監視が心配？ \r\n         インカメラの映像を何者かに傍受されている？ \r\n         Cyber Tunnel VPNで情報を保護・暗号化してはいかがでしょうか. \r\n        \r\n         チャットエクスプロイトを1時間無効化します.",
  	 	 	 	"eng": "Worried the Big Brother spying on you while you browse the cyberspace?\r\n        your intercoms always get hacked by malicious attacks? \r\n        use CyberTunnel VPN to protect and encrypt your netrunning experience! \r\n        \r\n        Once activated, ignores any chat exploit for 1 hour"
  	 	 	}
  	 	},
@@ -4956,7 +4956,7 @@
  	 	},
  	 	"rngInterferer": {
  	 	 	"name": {
- 	 	 	 	"trans": "乱数干渉",
+ 	 	 	 	"trans": "乱数干渉装置",
  	 	 	 	"eng": "RNG Interferer"
  	 	 	},
  	 	 	"descriptionv3": {
@@ -5050,7 +5050,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"percent"
  	 	 	 	],
- 	 	 	 	"trans": "もちもちとして甘い, 春節の伝統的な餅菓子. 幸運と繁栄をもたらすとされている.\\n シールドを${percent}回復する.",
+ 	 	 	 	"trans": "もちもちとして甘い, 春節の伝統的な餅菓子. 幸運と繁栄をもたらすとされている.\\n シールドを${percent}%回復する.",
  	 	 	 	"eng": "sticky and sweet rice cake is a traditional Lunar New Year food and is believed to bring good luck and prosperity.\\n recover ${percent}% shield upon consumption"
  	 	 	}
  	 	},
@@ -5096,7 +5096,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"segmentDisplayName"
  	 	 	 	],
- 	 	 	 	"trans": "シークレットキーを獲得するには, キーのかけらを使用する必要があります. \r\n                                 中心街[ハブ]にあるターミナルを使用し, ${segmentDisplayName}シークレットキーを獲得しましょう. \r\n                                 必要な3つのキーは各ダンジョン（ノーマル・チャレンジどれでも）でそれぞれ入手可能. \r\n                                 3つのキーを獲得すると,ターミナルを使って次のエリアへのキーをクラフトできる.",
+ 	 	 	 	"trans": "シークレットキーを手に入れるために必要な情報が入っている. \r\n                                 3つ集めて中心街の「ターミナル」に持って行けば, ${segmentDisplayName}駅のシークレットキーが手に入る. \r\n                                 各駅にある3つのダンジョンを攻略し, 次の駅のキーのかけらを集めよう.",
  	 	 	 	"eng": "A secret key Fragment used to brute-force a secret key.\r\n                                Use the Terminal at city center [Hub] to brute-force a ${segmentDisplayName} secret key.\r\n                                You can acquire each of the 3 required keys in each dungeon (both normal or challenge),\r\n                                when you acquired 3 keys, you may use Terminal to brute-force (Craft) a key to the next area"
  	 	 	}
  	 	},
@@ -5113,7 +5113,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"typeName"
  	 	 	 	],
- 	 	 	 	"trans": "${typeName}キャッシュには, 分子合成式3Dプリントに必要な情報が含まれている. \r\n                     [セントラルハブ]の[分子合成式3Dプリンタ]で${typeName}を作成できます. \r\n                    \r\n                     PRO TIP：プリンタから得られる装備のレベルは, プリントスキルのレベルに依存します. \r\n                     [ゴミみたいな]ものから先にプリントしていこう. コストをかけずにクラフトスキルを上げることができる/",
+ 	 	 	 	"trans": "${typeName}キャッシュには, 分子合成式3Dプリントに必要な情報が含まれている. \r\n                     これを「分子合成式3Dプリンタ」にのある所に持っていけば, ${typeName}を作成できる. \r\n                    商店街にある「ブラックマーケット」でお金に変えることもできるらしい.",
  	 	 	 	"eng": "A ${typeName} cache contains information used for Molecular 3D Printing, \r\n                    You can create a ${typeName} with the [Molecular 3d Printer] at [Central Hub].\r\n                    \r\n                    Pro tip: The level of item you get from printing is determined by your Printing Rank,\r\n                    so always print the trash ones first, as they cost less and useful to level up your Printing Rank"
  	 	 	}
  	 	}
@@ -5404,7 +5404,7 @@
  	 	 	 	 	"このゲームにカンパしてもらえないかしら？ プロフィールを綺麗にしてあげるわよ",
  	 	 	 	 	"ねぇ, 毎月のサブスクリプションに加入してくれたりしない？",
  	 	 	 	 	"いらっしゃいませ！ 何をお望みかしら？",
- 	 	 	 	 	"他のみんなより目立ちたい？ それなら「寄付者」のプランはいかが？",
+ 	 	 	 	 	"他のみんなより目立ちたい？ それなら「支援者」のプランはいかが？",
  	 	 	 	 	"サブスクリプションに加入してくれたら, プロフィール画像を用意してあげる！ どうかしら？",
  	 	 	 	 	"チャットフレームをカラフルにしたくはないかしら？ ぜひサブスクライブしてね！?",
  	 	 	 	 	"一番お手頃なサブスクプランなら, なんと月々たったコーヒー1杯のお値段！ ね, あたしのためにちょっぴり我慢してくれたりしない？",
@@ -5673,7 +5673,7 @@
  	 	 	 	 	"キャリブレーションは手伝ってやるけど, 事故って装備がぶっ壊れても責任は取らねーぜ.",
  	 	 	 	 	"相手の顔をしっかりと見て話す主義でね. ほら, あたしだけじゃなくウチの愛銃もじっくり見てるぜ. アンタの顔.",
  	 	 	 	 	"今日はツいてる気がする？ そいつぁいいや, そこのマシンで一発運試ししてみなよ.",
- 	 	 	 	 	"キャリブレーションはご自分の責任でよろしく頼むぜ. あん？ 不安だから責任者立ち合いのもとキャリブしたい？ 目の前にいるじゃんか.",
+ 	 	 	 	 	"キャリブレーションはご自分の責任でよろしく頼むぜ.",
  	 	 	 	 	"あたしはカミコ. そこのべっぴんが愛しのマシンのキャリーさ. あー, カノジョちょっと......怒ると手が付けらんないんだよね.",
  	 	 	 	 	"あんたの装備......や, えーと, もっと良くなると思うぜ. 貸してみなよ.",
  	 	 	 	 	"データを解析しなきゃなんで, コアを持ってきてもらってからキャリブレーションできるようになるまでには時間がかかるぜ.",
