--- a/contribution/lang/es.json
+++ b/contribution/lang/es.json
@@ -354,7 +354,7 @@
  	 	 	 	"eng": "mail"
  	 	 	},
  	 	 	"noti": {
- 	 	 	 	"trans": "🔔",
+ 	 	 	 	"trans": "Notificaciones",
  	 	 	 	"eng": "noti."
  	 	 	}
  	 	},
@@ -429,7 +429,7 @@
  	 	 	 	"eng": "SL Medical Center"
  	 	 	},
  	 	 	"title": {
- 	 	 	 	"trans": "Plano",
+ 	 	 	 	"trans": "Reiniciando sistemas",
  	 	 	 	"eng": "Flatlined"
  	 	 	},
  	 	 	"subTitleSmall": {
@@ -852,11 +852,11 @@
  	 	 	 	"vars": [
  	 	 	 	 	"skipCount"
  	 	 	 	],
- 	 	 	 	"trans": "Omitiendo a ${skipCount}",
+ 	 	 	 	"trans": "Acelerando a ${skipCount}",
  	 	 	 	"eng": "Skipping ${skipCount}"
  	 	 	},
  	 	 	"skipAvailable": {
- 	 	 	 	"trans": "Omición disponible",
+ 	 	 	 	"trans": "Aceleración disponible",
  	 	 	 	"eng": "Skip Available"
  	 	 	}
  	 	},
@@ -2237,7 +2237,7 @@
  	 	 	 	"eng": "Enemy Gangs and Equipment Marks"
  	 	 	},
  	 	 	"timeSkip": {
- 	 	 	 	"trans": "Omisión de tiempo",
+ 	 	 	 	"trans": "Aceleración de tiempo",
  	 	 	 	"eng": "time skip"
  	 	 	},
  	 	 	"calibration": {
@@ -2371,7 +2371,7 @@
  	 	},
  	 	"skip": {
  	 	 	"name": {
- 	 	 	 	"trans": "Saltar el paquete de suministros",
+ 	 	 	 	"trans": "Paquete de aceleración de tiempo",
  	 	 	 	"eng": "Skip supply bundle"
  	 	 	}
  	 	},
@@ -3988,7 +3988,7 @@
  	 	"donation11": {
  	 	 	"benefits": {
  	 	 	 	"1": {
- 	 	 	 	 	"trans": "Título de donación \"CyberKitty\".",
+ 	 	 	 	 	"trans": "Título de donación \"Cibergatito\".",
  	 	 	 	 	"eng": "\"CyberKitty\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
@@ -3996,11 +3996,11 @@
  	 	 	 	 	"eng": "Unlock profile picture customization"
  	 	 	 	},
  	 	 	 	"3": {
- 	 	 	 	 	"trans": "Marco de chat de Kitty (con animación).",
+ 	 	 	 	 	"trans": "Marco de chat de gatito (con animación).",
  	 	 	 	 	"eng": "Kitty chat frame (with animation)"
  	 	 	 	},
  	 	 	 	"4": {
- 	 	 	 	 	"trans": "Perfil enmarcado de Kitty (con animación).",
+ 	 	 	 	 	"trans": "Perfil enmarcado de gatito (con animación).",
  	 	 	 	 	"eng": "Kitty Framed Profile (with animation)"
  	 	 	 	},
  	 	 	 	"5": {
@@ -4148,7 +4148,7 @@
  	 	"donation15": {
  	 	 	"benefits": {
  	 	 	 	"1": {
- 	 	 	 	 	"trans": "Título de la donación de \"prestigio\"",
+ 	 	 	 	 	"trans": "Título de la donación de \"CyberMatrix\"",
  	 	 	 	 	"eng": "\"Prestige\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
@@ -5050,7 +5050,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"percent"
  	 	 	 	],
- 	 	 	 	"trans": "El pastel de arroz pegajoso y dulce es una comida tradicional de año nuevo lunar y se cree que trae buena suerte y prosperidad",
+ 	 	 	 	"trans": "El pastel de arroz pegajoso y dulce es una comida tradicional de año nuevo lunar y se cree que trae buena suerte y prosperidad.\\n recupera ${percent}% de escudo cuando lo consumes",
  	 	 	 	"eng": "sticky and sweet rice cake is a traditional Lunar New Year food and is believed to bring good luck and prosperity.\\n recover ${percent}% shield upon consumption"
  	 	 	}
  	 	},
@@ -5720,7 +5720,7 @@
  	 	},
  	 	"autoFarm": {
  	 	 	"name": {
- 	 	 	 	"trans": "Desplegar Bot de Recolección",
+ 	 	 	 	"trans": "Desplegar Bot de farmeo",
  	 	 	 	"eng": "Deploy farm bot"
  	 	 	},
  	 	 	"description": {
@@ -6055,7 +6055,7 @@
  	 	 	"eng": "Chat Encryption"
  	 	},
  	 	"rngInterferer": {
- 	 	 	"trans": "Interferencia RNG",
+ 	 	 	"trans": "Interferenci RNG",
  	 	 	"eng": "RNG Interference"
  	 	},
  	 	"flashGrenade": {
@@ -6232,11 +6232,11 @@
  	 	},
  	 	"shareDungeonModal": {
  	 	 	"title": {
- 	 	 	 	"trans": "¿Comparte mazmorras para chatear?",
+ 	 	 	 	"trans": "¿Compartir mazmorra al chat",
  	 	 	 	"eng": "Share Dungeon to chat?"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Puedes compartir tu mazmorra actual para chatear.",
+ 	 	 	 	"trans": "Puedes compartir tu mazmorra actual al cha.",
  	 	 	 	"eng": "You can share your current dungeon to chat."
  	 	 	},
  	 	 	"cancel": {
@@ -6608,7 +6608,7 @@
  	 	 	 	"eng": "This will donate ${amount} Unit from your account"
  	 	 	},
  	 	 	"notEnough": {
- 	 	 	 	"trans": "No tienes suficiente Unidades para donar.",
+ 	 	 	 	"trans": "No tienes suficientes Unidades para donar.",
  	 	 	 	"eng": "You do not have enough Unit to donate."
  	 	 	}
  	 	},
@@ -6941,7 +6941,7 @@
  	 	},
  	 	"freeButton": {
  	 	 	"text": {
- 	 	 	 	"trans": "Reclamación gratis",
+ 	 	 	 	"trans": "Reclama gratis",
  	 	 	 	"eng": "Claim for free"
  	 	 	}
  	 	},
@@ -7076,7 +7076,7 @@
  	 	 	"eng": "Refer your friends to get amazing rewards!"
  	 	},
  	 	"desc1": {
- 	 	 	"trans": "Libre de Unidades*",
+ 	 	 	"trans": "Unidades gratis*",
  	 	 	"eng": "Free Unit*"
  	 	},
  	 	"desc2": {
