--- a/contribution/lang/zh-TW.json
+++ b/contribution/lang/zh-TW.json
@@ -4108,39 +4108,39 @@
  	 	"donation14": {
  	 	 	"benefits": {
  	 	 	 	"1": {
- 	 	 	 	 	"trans": "“電驅天龍”捐贈標題",
+ 	 	 	 	 	"trans": "“電驅天龍”贊助頭銜",
  	 	 	 	 	"eng": "\"Cyberdragon\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
- 	 	 	 	 	"trans": "解鎖個人資料圖片自定義",
+ 	 	 	 	 	"trans": "自訂個人檔案圖片",
  	 	 	 	 	"eng": "Unlock profile picture customization"
  	 	 	 	},
  	 	 	 	"3": {
- 	 	 	 	 	"trans": "農曆新年聊天框架（帶有動畫）",
+ 	 	 	 	 	"trans": "農曆新年聊天外框（內建動畫）",
  	 	 	 	 	"eng": "Lunar new year chat frame (with animation)"
  	 	 	 	},
  	 	 	 	"4": {
- 	 	 	 	 	"trans": "農曆新年構架個人資料（帶有動畫）",
+ 	 	 	 	 	"trans": "農曆新年個人檔案外框（內建動畫）",
  	 	 	 	 	"eng": "Lunar new year Framed Profile (with animation)"
  	 	 	 	},
  	 	 	 	"5": {
- 	 	 	 	 	"trans": "解鎖自定義生物",
+ 	 	 	 	 	"trans": "自訂個人簡歷",
  	 	 	 	 	"eng": "Unlock custom bio"
  	 	 	 	},
  	 	 	 	"6": {
- 	 	 	 	 	"trans": "電驅天龍裝飾",
+ 	 	 	 	 	"trans": "個人檔案的電驅天龍裝飾",
  	 	 	 	 	"eng": "Dragon decoration on profile"
  	 	 	 	},
  	 	 	 	"7": {
- 	 	 	 	 	"trans": "定制幫派座右銘",
+ 	 	 	 	 	"trans": "自訂公會座右銘",
  	 	 	 	 	"eng": "Customize gang motto"
  	 	 	 	},
  	 	 	 	"8": {
- 	 	 	 	 	"trans": "自定義幫派圖像",
+ 	 	 	 	 	"trans": "自訂公會圖片",
  	 	 	 	 	"eng": "Customize gang image"
  	 	 	 	},
  	 	 	 	"9": {
- 	 	 	 	 	"trans": "將來更新會有更多",
+ 	 	 	 	 	"trans": "未來會有更多的更新",
  	 	 	 	 	"eng": "More coming in future update"
  	 	 	 	}
  	 	 	}
@@ -4148,39 +4148,39 @@
  	 	"donation15": {
  	 	 	"benefits": {
  	 	 	 	"1": {
- 	 	 	 	 	"trans": "“電驅駭客”捐贈標題",
+ 	 	 	 	 	"trans": "“電驅駭客”贊助頭銜",
  	 	 	 	 	"eng": "\"Prestige\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
- 	 	 	 	 	"trans": "解鎖個人資料圖片自定義",
+ 	 	 	 	 	"trans": "自訂個人檔案圖片",
  	 	 	 	 	"eng": "Unlock profile picture customization"
  	 	 	 	},
  	 	 	 	"3": {
- 	 	 	 	 	"trans": "霓虹燈綠色聊天框架（帶有動畫）",
+ 	 	 	 	 	"trans": "綠色霓虹聊天外框（內建動畫）",
  	 	 	 	 	"eng": "Neon green chat frame (with animation)"
  	 	 	 	},
  	 	 	 	"4": {
- 	 	 	 	 	"trans": "霓虹燈綠色框架配置文件（帶有動畫）",
+ 	 	 	 	 	"trans": "綠色霓虹個人檔案外框（內建動畫）",
  	 	 	 	 	"eng": "Neon green Framed Profile (with animation)"
  	 	 	 	},
  	 	 	 	"5": {
- 	 	 	 	 	"trans": "解鎖自定義生物",
+ 	 	 	 	 	"trans": "自訂個人簡歷",
  	 	 	 	 	"eng": "Unlock custom bio"
  	 	 	 	},
  	 	 	 	"6": {
- 	 	 	 	 	"trans": "輪廓上的條形碼裝飾",
+ 	 	 	 	 	"trans": "個人檔案的條碼裝飾",
  	 	 	 	 	"eng": "Barcode decoration on profile"
  	 	 	 	},
  	 	 	 	"7": {
- 	 	 	 	 	"trans": "定制幫派座右銘",
+ 	 	 	 	 	"trans": "自訂公會座右銘",
  	 	 	 	 	"eng": "Customize gang motto"
  	 	 	 	},
  	 	 	 	"8": {
- 	 	 	 	 	"trans": "自定義幫派圖像",
+ 	 	 	 	 	"trans": "自訂公會圖片",
  	 	 	 	 	"eng": "Customize gang image"
  	 	 	 	},
  	 	 	 	"9": {
- 	 	 	 	 	"trans": "將來更新會有更多",
+ 	 	 	 	 	"trans": "未來會有更多的更新",
  	 	 	 	 	"eng": "More coming in future update"
  	 	 	 	}
  	 	 	}
@@ -7140,7 +7140,7 @@
  	 	 	"vars": [
  	 	 	 	"time"
  	 	 	],
- 	 	 	"trans": "在${time}中再次使用",
+ 	 	 	"trans": "在${time}後再次使用",
  	 	 	"eng": "Available again in ${time}"
  	 	},
  	 	"freeButton": {
@@ -7240,7 +7240,7 @@
  	 	 	"eng": "Happy Lunar New year!"
  	 	},
  	 	"desc1": {
- 	 	 	"trans": "農曆新年來了喔，我們在香格里拉舉行特別活動。 加入我們，讓我們擁抱新的一年的開始，充滿傳統，喜悅和團結。",
+ 	 	 	"trans": "農曆新年要到了，我們正在香格里拉舉行特別活動。 加入我們，讓我們用傳統，喜悅和團結迎接新的一年開始。",
  	 	 	"eng": "The lunar new year is here, and we're celebrating in Shang-ri-la with a special event. Join us as we embrace the start of a new year, filled with traditions, joy, and togetherness."
  	 	},
  	 	"desc2": {
@@ -7250,7 +7250,7 @@
  	 	 	 	"llcName",
  	 	 	 	"npcName"
  	 	 	],
- 	 	 	"trans": "${npcShopName}已開始營業！ 您可以使用${coinItem}從${npcName}購買各種特殊美食和${llcName}！",
+ 	 	 	"trans": "${npcShopName}已開始營業！ 您可以使用${coinItem}向${npcName}購買各種特殊美食和${llcName}！",
  	 	 	"eng": "${npcShopName} is now open for business! You can use ${coinItem} to purchase various special cuisines and ${llcName} from ${npcName}!"
  	 	},
  	 	"desc3": {
@@ -7270,7 +7270,7 @@
  	 	 	"eng": "You can now receive 3 free ${envelopItem} in ${npcShop} every day!"
  	 	},
  	 	"desc5": {
- 	 	 	"trans": "添加了兩個新的限時聊天框架和標誌，僅在活動期間可購買。",
+ 	 	 	"trans": "添加了兩個新的限時聊天外框和徽章，僅可在活動期間購買。",
  	 	 	"eng": "Added two new time limited chat frame and emblems, only purchasable during event period."
  	 	}
  	},
