--- a/contribution/lang/es.json
+++ b/contribution/lang/es.json
@@ -4325,7 +4325,7 @@
  	 	},
  	 	"techScrap": {
  	 	 	"name": {
- 	 	 	 	"trans": "Chatarra",
+ 	 	 	 	"trans": "Chatarra tecnológica",
  	 	 	 	"eng": "Tech Scrap"
  	 	 	},
  	 	 	"description": {
@@ -5110,7 +5110,7 @@
  	 	 	 	 	"tierName",
  	 	 	 	 	"typeName"
  	 	 	 	],
- 	 	 	 	"trans": "${tierName}: Caché de ${typeName}",
+ 	 	 	 	"trans": "[${tierName}]: Caché de ${typeName}",
  	 	 	 	"eng": "${tierName} ${typeName} cache"
  	 	 	},
  	 	 	"description": {
@@ -5425,7 +5425,7 @@
  	 	"weaponSmith": {
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
- 	 	 	 	 	"Encontrarás el mejor equipamiento aquí, créeme."
+ 	 	 	 	 	"Aquí encontrarás el mejor equipamiento, créeme."
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"You will find the best gear here, trust me."
@@ -5537,7 +5537,7 @@
  	 	"blackMarket": {
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
- 	 	 	 	 	"Oye niñito, ¿Te interesa ganar algo de dinero extra rápido?"
+ 	 	 	 	 	"Oye chico, ¿Te interesa ganar algo de dinero extra rápido?"
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"Hey kid, wanna make some quick bucks?"
