--- a/contribution/lang/pt.json
+++ b/contribution/lang/pt.json
@@ -852,7 +852,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"skipCount"
  	 	 	 	],
- 	 	 	 	"trans": "Avançar ${skipCount}",
+ 	 	 	 	"trans": "Avançando ${skipCount}",
  	 	 	 	"eng": "Skipping ${skipCount}"
  	 	 	},
  	 	 	"skipAvailable": {
@@ -4910,11 +4910,11 @@
  	 	},
  	 	"upgradeResetShard": {
  	 	 	"name": {
- 	 	 	 	"trans": "Fragmneto de Restauração de fábrica",
+ 	 	 	 	"trans": "Fragmento de Restauração de fábrica",
  	 	 	 	"eng": "Factory reset shard"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Um fragmneto que recupera as configurações de fábrica dos equipamentos, isto é usado para restaurar os atributos de fabrica de seus equipamentos",
+ 	 	 	 	"trans": "Um fragmento que recupera as configurações de fábrica dos equipamentos, isto é usado para restaurar os atributos de fabrica de seus equipamentos",
  	 	 	 	"eng": "A shard stores default settings and algorithm for equipments, this is used for factory-resetting your equipments"
  	 	 	}
  	 	},
@@ -4999,7 +4999,7 @@
  	 	},
  	 	"afkRewardBoost": {
  	 	 	"name": {
- 	 	 	 	"trans": "Fragmneto de Boost de Recompensa",
+ 	 	 	 	"trans": "Fragmento de Boost de Recompensa",
  	 	 	 	"eng": "Reward Booster Shard"
  	 	 	},
  	 	 	"description": {
@@ -5083,7 +5083,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"levelName"
  	 	 	 	],
- 	 	 	 	"trans": "Um fragmneto que contém a memória e a experiência de alguém, se usado, você vai ganhar ${levelName} de experiência",
+ 	 	 	 	"trans": "Um fragmento que contém a memória e a experiência de alguém, se usado, você vai ganhar ${levelName} de experiência",
  	 	 	 	"eng": "A shard that contains someone's memory and experience. If used you may gain ${levelName} experience from this"
  	 	 	}
  	 	},
