--- a/contribution/lang/pt.json
+++ b/contribution/lang/pt.json
@@ -852,7 +852,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"skipCount"
  	 	 	 	],
- 	 	 	 	"trans": "Avançando ${skipCount}",
+ 	 	 	 	"trans": "Acelerando ${skipCount}",
  	 	 	 	"eng": "Skipping ${skipCount}"
  	 	 	},
  	 	 	"skipAvailable": {
