update cs translation
correct some bad translation in first 500 rows.

--- a/contribution/lang/cs.json
+++ b/contribution/lang/cs.json
@@ -13,7 +13,7 @@
  	 	 	"eng": "Quest"
  	 	},
  	 	"chat": {
- 	 	 	"trans": "Povídat si",
+ 	 	 	"trans": "Chat", 
  	 	 	"eng": "Chat"
  	 	},
  	 	"profile": {
@@ -38,7 +38,7 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"amount"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "${amount} Bitcoinů bude vloženo na účet vašeho gangu, tato akce nemůže být vrácena",
+ 	 	 	 	 	"trans": "${amount} Bitcoinů bude vloženo na účet vašeho gangu, tuto akci nelze vrátit",
  	 	 	 	 	"eng": "${amount} bitcoin will be deposit into your gang account, this cannot be reversed"
  	 	 	 	}
  	 	 	},
@@ -49,7 +49,7 @@
  	 	 	"editMotto": {
  	 	 	 	"modal": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "Prosím, zadejte vaše motto gangu",
+ 	 	 	 	 	 	"trans": "Prosím, zadejte motto gangu",
  	 	 	 	 	 	"eng": "Please enter your gang motto"
  	 	 	 	 	}
  	 	 	 	},
@@ -60,7 +60,7 @@
  	 	 	},
  	 	 	"updateImage": {
  	 	 	 	"button": {
- 	 	 	 	 	"trans": "Aktualizovat Obrázek gangu",
+ 	 	 	 	 	"trans": "Aktualizovat obrázek gangu",
  	 	 	 	 	"eng": "Update Gang Image"
  	 	 	 	}
  	 	 	},
@@ -137,7 +137,7 @@
  	 	 	 	 	}
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Našli jste uzamčenou kořist s barevnou klávesnicí, měli byste jej odemknout se správným pořadem barev.",
+ 	 	 	 	 	"trans": "Našel jsi uzamčenou kořist s barevnou klávesnicí, měl bys být schopný jí odemknout správným pořadím barev.",
  	 	 	 	 	"eng": "You found a locked loot box with color keypad, you should be able to unlock it with the correct sequence of colors."
  	 	 	 	},
  	 	 	 	"progress": {
@@ -174,7 +174,7 @@
  	 	},
  	 	"supportUkraine": {
  	 	 	"description": {
- 	 	 	 	"trans": "Lidé Ukrajiny, Ruska a celý svět trpí, protože ambice jednoho muže.",
+ 	 	 	 	"trans": "Lidé na Ukrajině, v Rusku a celém světě trpí kvůli ambici jednoho člověka.\n Propagujte lásku, ne válku.",
  	 	 	 	"eng": "People of Ukraine, Russia and the whole world are suffering because one man's ambition.\\n Make love exploit, not war."
  	 	 	}
  	 	},
@@ -249,7 +249,7 @@
  	 	 	},
  	 	 	"upgradeVaultModal": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Upgrade Vault",
+ 	 	 	 	 	"trans": "Upgrade trezoru",
  	 	 	 	 	"eng": "Upgrade Vault"
  	 	 	 	},
  	 	 	 	"confirm": {
@@ -364,7 +364,7 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"vpnName"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "Využití chat je ve skutečnosti, veškerá odeslaná zpráva bude změněna. Pomocí ${vpnName} zajistěte své připojení!",
+ 	 	 	 	 	"trans": "Chatovací exploit je aktivní, všechny odeslané zprávy budou změněny. Použijte ${vpnName} pro zabezpečení vašeho připojení!",
  	 	 	 	 	"eng": "Chat exploit is in effect, all message sent will be altered. use ${vpnName} to secure your connection!"
  	 	 	 	},
  	 	 	 	"activateVPN": {
@@ -388,7 +388,7 @@
  	 	},
  	 	"chatPreview": {
  	 	 	"notConnected": {
- 	 	 	 	"trans": "Chatový systém není připojen",
+ 	 	 	 	"trans": "Chatovací systém není připojen",
  	 	 	 	"eng": "chat system not connected"
  	 	 	}
  	 	},
@@ -402,7 +402,7 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"cost"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "Chat gang bude povolen, když patříte do gangu",
+ 	 	 	 	 	"trans": "Chat gangu bude povolen, jakmile budete členem gangu.\\nStaňte se členem gangu hledáním přátel v chatu, nebo založte vlastní gang a pozvěte své přátele.",
  	 	 	 	 	"eng": "gang chat will be enabled when you belong to a gang.\\njoin a gang by making friends in global chat or create your own gang and invite your friends!"
  	 	 	 	},
  	 	 	 	"createButton": {
@@ -455,15 +455,15 @@
  	 	 	 	}
  	 	 	},
  	 	 	"lowPrintLevelTip2": {
- 	 	 	 	"trans": "Zvyšte svou úroveň tisku a vyrábějte silnější vybavení tím, že vytisknete více Schémat",
+ 	 	 	 	"trans": "Zvyšte svou úroveň tisku a vyrábějte silnější vybavení tím, že vytisknete více výrobků",
  	 	 	 	"eng": "Increase your Printing Rank to create more powerful weapons by printing more caches"
  	 	 	},
  	 	 	"lowPrintLevelTip3": {
- 	 	 	 	"trans": "Nebo automatickým tiskem a prodejem svých Schémat na černém trhu",
+ 	 	 	 	"trans": "Alternativně můžete použít automatický tisk a prodávat vaše výrobky na černém trhu.",
  	 	 	 	"eng": "Or by auto print and selling your caches in the Black Market"
  	 	 	},
  	 	 	"quickSlots": {
- 	 	 	 	"trans": "Rychlé akce",
+ 	 	 	 	"trans": "Rychlý přístup",
  	 	 	 	"eng": "Quick Slots"
  	 	 	},
  	 	 	"equipped": {
@@ -480,7 +480,7 @@
  	 	 	},
  	 	 	"bindModal": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Vyberte použitelný předmět, která bude v rychlém přístupu",
+ 	 	 	 	 	"trans": "Přiřaďte předmět do rychlého přístupu",
  	 	 	 	 	"eng": "Select a usable item to bind to a quick slot"
  	 	 	 	}
  	 	 	}
@@ -526,7 +526,7 @@
  	 	 	 	 	 	"timeSkipMinutes",
  	 	 	 	 	 	"timeSkipCost"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "Globální skok (${timeSkipMinutes} minut, cena ${timeSkipCost} Jednotek)",
+ 	 	 	 	 	"trans": "Globální skok (${timeSkipMinutes} minut za cenu ${timeSkipCost} Jednotek)",
  	 	 	 	 	"eng": "Global Skip (${timeSkipMinutes} Min, Cost ${timeSkipCost} Units)"
  	 	 	 	},
  	 	 	 	"description": {
