--- a/contribution/lang/ja.json
+++ b/contribution/lang/ja.json
@@ -1450,7 +1450,7 @@
  	 	 	 	 	"eng": "Tiny"
  	 	 	 	},
  	 	 	 	"tiny": {
- 	 	 	 	 	"trans": "小さい",
+ 	 	 	 	 	"trans": "もっと小さい",
  	 	 	 	 	"eng": "Tiny"
  	 	 	 	}
  	 	 	},
