--- a/contribution/lang/uk.json
+++ b/contribution/lang/uk.json
@@ -9,7 +9,7 @@
  	 	 	"eng": "Inventory"
  	 	},
  	 	"quest": {
- 	 	 	"trans": "Квест",
+ 	 	 	"trans": "Завдання",
  	 	 	"eng": "Quest"
  	 	},
  	 	"chat": {
@@ -219,7 +219,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"upgradeToSlot"
  	 	 	 	],
- 	 	 	 	"trans": "Збільшити сховище до ${upgradeToSlot} слотів",
+ 	 	 	 	"trans": "ЗБІЛЬШИТИ СХОВИЩЕ ДО ${upgradeToSlot} СЛОТІВ",
  	 	 	 	"eng": "UPGRADE TO ${upgradeToSlot} SLOTS"
  	 	 	},
  	 	 	"upgradeSlotDesc": {
@@ -249,7 +249,7 @@
  	 	 	},
  	 	 	"upgradeVaultModal": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Оновіть склепіння",
+ 	 	 	 	 	"trans": "Оновіть сховище",
  	 	 	 	 	"eng": "Upgrade Vault"
  	 	 	 	},
  	 	 	 	"confirm": {
@@ -266,19 +266,19 @@
  	 	 	"attackButton": {
  	 	 	 	"primary": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "основна",
+ 	 	 	 	 	 	"trans": "Основна",
  	 	 	 	 	 	"eng": "primary"
  	 	 	 	 	}
  	 	 	 	},
  	 	 	 	"secondary": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "спец",
+ 	 	 	 	 	 	"trans": "Спец",
  	 	 	 	 	 	"eng": "special"
  	 	 	 	 	}
  	 	 	 	},
  	 	 	 	"tertiary": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "руйнівна",
+ 	 	 	 	 	 	"trans": "Руйнівна",
  	 	 	 	 	 	"eng": "Destruct."
  	 	 	 	 	}
  	 	 	 	}
@@ -286,7 +286,7 @@
  	 	},
  	 	"generalCaptcha": {
  	 	 	"story": {
- 	 	 	 	"trans": "Ви знайшли старий замкнутий сейф. На нього наліплено папірчик з якимось текстом.",
+ 	 	 	 	"trans": "Ви знайшли старий замкнутий сейф. На нього наліплено записку з якимось текстом.",
  	 	 	 	"eng": "You found an old locked safe box, there seems like a post-it with some text written on it."
  	 	 	},
  	 	 	"title": {
@@ -315,7 +315,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"playerName"
  	 	 	 	],
- 	 	 	 	"trans": "Відповідь ${playerName}",
+ 	 	 	 	"trans": "Відповісти ${playerName}",
  	 	 	 	"eng": "Replying to ${playerName}"
  	 	 	},
  	 	 	"linksNotAllowed": {
@@ -364,7 +364,7 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"vpnName"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "Експлуатація чату діє, все надіслане повідомлення буде змінено. Використовуйте ${vpnName}, щоб забезпечити з'єднання!",
+ 	 	 	 	 	"trans": "Експлойт для чату діє, всі надіслані повідомлення буде викривлено. Використовуйте ${vpnName}, щоб забезпечити з'єднання!",
  	 	 	 	 	"eng": "Chat exploit is in effect, all message sent will be altered. use ${vpnName} to secure your connection!"
  	 	 	 	},
  	 	 	 	"activateVPN": {
@@ -395,18 +395,18 @@
  	 	"clanPage": {
  	 	 	"createClan": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Ви не є членом жодної банди",
+ 	 	 	 	 	"trans": "Ви не є членом жодної ватаги",
  	 	 	 	 	"eng": "You are not a member of any gang"
  	 	 	 	},
  	 	 	 	"subtitle": {
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"cost"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "Чат банди буде ввімкнено, коли ви належите до банди",
+ 	 	 	 	 	"trans": "Чат ватаги буде ввімкнено, коли ви належите до ватаги",
  	 	 	 	 	"eng": "gang chat will be enabled when you belong to a gang.\\njoin a gang by making friends in global chat or create your own gang and invite your friends!"
  	 	 	 	},
  	 	 	 	"createButton": {
- 	 	 	 	 	"trans": "Створити банду",
+ 	 	 	 	 	"trans": "Створити ватагу",
  	 	 	 	 	"eng": "Create gang"
  	 	 	 	},
  	 	 	 	"createButtonDescription": {
@@ -414,14 +414,14 @@
  	 	 	 	 	 	"cost",
  	 	 	 	 	 	"currency"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "Створіть банду за ${cost} ${currency}",
+ 	 	 	 	 	"trans": "Створіть ватагу за ${cost} ${currency}",
  	 	 	 	 	"eng": "Create a gang for ${cost} ${currency}"
  	 	 	 	}
  	 	 	}
  	 	},
  	 	"deathScreen": {
  	 	 	"topTitleLeft": {
- 	 	 	 	"trans": "фатальна травма",
+ 	 	 	 	"trans": "Фатальна травма",
  	 	 	 	"eng": "fatal injury"
  	 	 	},
  	 	 	"topTitleRight": {
@@ -495,7 +495,7 @@
  	 	 	 	"eng": "Dungeon List"
  	 	 	},
  	 	 	"links": {
- 	 	 	 	"trans": "посилання",
+ 	 	 	 	"trans": "Посилання",
  	 	 	 	"eng": "links"
  	 	 	},
  	 	 	"premiumShop": {
@@ -530,7 +530,7 @@
  	 	 	 	 	"eng": "Global Skip (${timeSkipMinutes} Min, Cost ${timeSkipCost} Units)"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Глобальне прискорення дозволяє пришвидшити виконання AFK завдання, і завершити його одразу.\n    цей ефект буде застосовано до всіх гравців, що виконують AFK завдання",
+ 	 	 	 	 	"trans": "Глобальне прискорення дозволяє пришвидшити виконання AFK завдання, і завершити його миттєво.\n    цей ефект буде застосовано до всіх гравців, що виконують AFK завдання",
  	 	 	 	 	"eng": "Global Skip allow you to skip the AFK waiting time, and finish it instantly.\r\n    this effect will be applied to all player performing AFK task"
  	 	 	 	}
  	 	 	},
@@ -587,11 +587,11 @@
  	 	},
  	 	"inventory": {
  	 	 	"items": {
- 	 	 	 	"trans": "речі",
+ 	 	 	 	"trans": "Речі",
  	 	 	 	"eng": "items"
  	 	 	},
  	 	 	"secretKeys": {
- 	 	 	 	"trans": "таємні ключі",
+ 	 	 	 	"trans": "Таємні ключі",
  	 	 	 	"eng": "secret keys"
  	 	 	},
  	 	 	"autoScrap": {
@@ -624,7 +624,7 @@
  	 	 	 	 	"eng": "Create Lore"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Поки що немає допису спільноти про цю річ. Створити допис?",
+ 	 	 	 	 	"trans": "Поки що немає допису спільноти про цю річ, створи допис першим",
  	 	 	 	 	"eng": "There is no community lore for this item yet, be the first to create one for it."
  	 	 	 	}
  	 	 	},
@@ -711,8 +711,8 @@
  	 	 	 	"eng": "Print Cache"
  	 	 	},
  	 	 	"printCacheDescription": {
- 	 	 	 	"trans": "Перетворіть цей кеш у зброю або предмет обладнання, який ви можете ОАЕ.",
- 	 	 	 	"eng": "Turn this cache into a weapon or equipment item that you can uae."
+ 	 	 	 	"trans": "Перетворіть цю схему у зброю або предмет обладнання, який ви можете використовувати.",
+ 	 	 	 	"eng": "Turn this cache into a weapon or equipment item that you can use."
  	 	 	},
  	 	 	"openContainer": {
  	 	 	 	"trans": "Розблокувати контейнер",
@@ -741,7 +741,7 @@
  	 	 	},
  	 	 	"itemUpgradeButton": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "вдосконалити",
+ 	 	 	 	 	"trans": "Вдосконалити",
  	 	 	 	 	"eng": "upgrade"
  	 	 	 	}
  	 	 	},
@@ -759,7 +759,7 @@
  	 	 	 	 	"eng": "You no longer have this item"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Натисніть назад, щоб повернутися до інвентаризації",
+ 	 	 	 	 	"trans": "Натисніть назад, щоб повернутися до інвентаря",
  	 	 	 	 	"eng": "press back to go back to inventory"
  	 	 	 	}
  	 	 	}
@@ -780,13 +780,13 @@
  	 	},
  	 	"backToPreviusLoc": {
  	 	 	"longPressBackToCity": {
- 	 	 	 	"trans": "Потримайте, щоб повернутися до міста",
+ 	 	 	 	"trans": "Утримуйте, щоб повернутися до міста",
  	 	 	 	"eng": "Long press to go back to city"
  	 	 	}
  	 	},
  	 	"notificationCenter": {
  	 	 	"deleteTip": {
- 	 	 	 	"trans": "Потримайте, щоб видалити",
+ 	 	 	 	"trans": "Утримуйте, щоб видалити",
  	 	 	 	"eng": "Long press to delete"
  	 	 	}
  	 	},
@@ -831,7 +831,7 @@
  	 	 	 	 	 	"vars": [
  	 	 	 	 	 	 	"level"
  	 	 	 	 	 	],
- 	 	 	 	 	 	"trans": "Рівень друку ${level} обладнання",
+ 	 	 	 	 	 	"trans": "Друк предметів ${level} рівня",
  	 	 	 	 	 	"eng": "printing level ${level} equipments"
  	 	 	 	 	},
  	 	 	 	 	"description": {
@@ -842,7 +842,7 @@
  	 	 	},
  	 	 	"buyUnit": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Купити Юніт",
+ 	 	 	 	 	"trans": "Купити Юніти",
  	 	 	 	 	"eng": "Buy Unit"
  	 	 	 	}
  	 	 	}
@@ -866,7 +866,7 @@
  	 	 	 	"eng": "Alias"
  	 	 	},
  	 	 	"title": {
- 	 	 	 	"trans": "звання",
+ 	 	 	 	"trans": "Звання",
  	 	 	 	"eng": "title"
  	 	 	},
  	 	 	"gearScore": {
@@ -890,7 +890,7 @@
  	 	 	 	"eng": "Status"
  	 	 	},
  	 	 	"bio": {
- 	 	 	 	"trans": "Біо",
+ 	 	 	 	"trans": "Опис",
  	 	 	 	"eng": "Bio"
  	 	 	},
  	 	 	"bioNotFound": {
@@ -898,7 +898,7 @@
  	 	 	 	"eng": "REDACTED"
  	 	 	},
  	 	 	"decoration1": {
- 	 	 	 	"trans": "конфіденційний",
+ 	 	 	 	"trans": "Конфіденційний",
  	 	 	 	"eng": "confidential"
  	 	 	},
  	 	 	"decoration2": {
@@ -909,7 +909,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"date"
  	 	 	 	],
- 	 	 	 	"trans": "Файл, створений за адресою ${date}",
+ 	 	 	 	"trans": "Файл створено ${date}",
  	 	 	 	"eng": "file created at ${date}"
  	 	 	},
  	 	 	"numOfMember": {
@@ -968,12 +968,12 @@
  	 	 	 	 	"eng": "Give Street Cred"
  	 	 	 	},
  	 	 	 	"report": {
- 	 	 	 	 	"trans": "Звітувати гравця",
+ 	 	 	 	 	"trans": "Звітувати про порушення",
  	 	 	 	 	"eng": "Report Player"
  	 	 	 	}
  	 	 	},
  	 	 	"equipped": {
- 	 	 	 	"trans": "Обладнаний",
+ 	 	 	 	"trans": "Обладнання",
  	 	 	 	"eng": "Equipped"
  	 	 	},
  	 	 	"inventory": {
@@ -1065,7 +1065,7 @@
  	 	 	 	}
  	 	 	},
  	 	 	"noItems": {
- 	 	 	 	"trans": "поки що немає речей цієї категорії на продажу",
+ 	 	 	 	"trans": "Поки що немає речей цієї категорії на продажу",
  	 	 	 	"eng": "there is currently no items on sale for this category"
  	 	 	},
  	 	 	"buy": {
@@ -1101,7 +1101,7 @@
  	 	 	 	"eng": "Please ensure your device time is correct."
  	 	 	},
  	 	 	"manualRefresh": {
- 	 	 	 	"trans": "оновити вручну",
+ 	 	 	 	"trans": "Оновити вручну",
  	 	 	 	"eng": "Manual Refresh"
  	 	 	},
  	 	 	"abort": {
@@ -1170,7 +1170,7 @@
  	 	 	 	 	},
  	 	 	 	 	"description": {
  	 	 	 	 	 	"trans": "Ваше поточне обладнання здається трохи застарілим для вашого рівня, спробуйте друкувати сильніші речі",
- 	 	 	 	 	 	"eng": "Your current equipment seems abit outdated for your level, try printing stronger ones to replace them"
+ 	 	 	 	 	 	"eng": "Your current equipment seems a bit outdated for your level, try printing stronger ones to replace them"
  	 	 	 	 	}
  	 	 	 	},
  	 	 	 	"noUpgrade": {
@@ -1192,7 +1192,7 @@
  	 	 	 	 	 	"eng": "Use AI Core"
  	 	 	 	 	},
  	 	 	 	 	"description": {
- 	 	 	 	 	 	"trans": "Схоже, у вас є кілька Ядер AI, використайте їх, щоб підняти рівень AFK завданням у місці відповідного рівня.",
+ 	 	 	 	 	 	"trans": "Схоже, у вас є кілька Ядер AI, використайте їх, щоб підняти рівень AFK завдання у місці відповідного рівня.",
  	 	 	 	 	 	"eng": "Looks like you have some AI Cores, use them to do AFK auto leveling in appropriate level area."
  	 	 	 	 	}
  	 	 	 	},
@@ -1242,7 +1242,7 @@
  	 	},
  	 	"mobileQuestPage": {
  	 	 	"rewards": {
- 	 	 	 	"trans": "винагороди",
+ 	 	 	 	"trans": "Винагороди",
  	 	 	 	"eng": "rewards"
  	 	 	},
  	 	 	"rewardAvailable": {
