--- a/contribution/lang/zh-TW.json
+++ b/contribution/lang/zh-TW.json
@@ -38,7 +38,7 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"amount"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "${amount}比特幣將存入你的公會帳戶，這將無法復原",
+ 	 	 	 	 	"trans": "${amount}存入比特幣至公會帳戶，比特幣將從帳戶扣除並無法還原",
  	 	 	 	 	"eng": "${amount} bitcoin will be deposit into your gang account, this cannot be reversed"
  	 	 	 	}
  	 	 	},
@@ -196,7 +196,7 @@
  	 	 	 	"eng": "Withdraw"
  	 	 	},
  	 	 	"withdrawDesc": {
- 	 	 	 	"trans": "從銀行中提取比特幣",
+ 	 	 	 	"trans": "從銀行中領出比特幣",
  	 	 	 	"eng": "Take Bitcoins out of bank"
  	 	 	},
  	 	 	"putItemToVault": {
@@ -204,15 +204,15 @@
  	 	 	 	"eng": "Deposit Item"
  	 	 	},
  	 	 	"putItemToVaultDesc": {
- 	 	 	 	"trans": "將物品放入你的保險庫中",
+ 	 	 	 	"trans": "將物品放入你的保險箱中",
  	 	 	 	"eng": "Put items into your vault"
  	 	 	},
  	 	 	"takeItemFromVault": {
- 	 	 	 	"trans": "提取物品",
+ 	 	 	 	"trans": "領出物品",
  	 	 	 	"eng": "Withdraw Item"
  	 	 	},
  	 	 	"takeItemFromVaultDesc": {
- 	 	 	 	"trans": "從你的保險庫中取出物品",
+ 	 	 	 	"trans": "從你的保險箱中領出物品",
  	 	 	 	"eng": "Take items out from your vault"
  	 	 	},
  	 	 	"upgradeSlot": {
@@ -226,16 +226,16 @@
  	 	 	 	"vars": [
  	 	 	 	 	"upgradeToSlot"
  	 	 	 	],
- 	 	 	 	"trans": "增加你可以儲存在保險庫中的最大物品到${upgradeToSlot}",
+ 	 	 	 	"trans": "增加你可以儲存在保險箱中的最大物品到${upgradeToSlot}",
  	 	 	 	"eng": "Increase the max amount of items you can store in vault to ${upgradeToSlot}"
  	 	 	},
  	 	 	"modal": {
  	 	 	 	"selectDepositItem": {
- 	 	 	 	 	"trans": "你想把多少個物品存進保險庫？",
+ 	 	 	 	 	"trans": "你想把多少個物品存進保險箱？",
  	 	 	 	 	"eng": "How many would you like to put in the vault?"
  	 	 	 	},
  	 	 	 	"selectWithdrawItem": {
- 	 	 	 	 	"trans": "你想從保險庫提取多少個物品？",
+ 	 	 	 	 	"trans": "你想從保險箱提取多少個物品？",
  	 	 	 	 	"eng": "How many would you like to withdraw from the bank?"
  	 	 	 	},
  	 	 	 	"selectDeposit": {
@@ -243,13 +243,13 @@
  	 	 	 	 	"eng": "How much would you like to deposit?"
  	 	 	 	},
  	 	 	 	"selectWithdraw": {
- 	 	 	 	 	"trans": "你想提取多少錢？",
+ 	 	 	 	 	"trans": "你想領出多少錢？",
  	 	 	 	 	"eng": "How much would you like to withdraw?"
  	 	 	 	}
  	 	 	},
  	 	 	"upgradeVaultModal": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "升級保險庫",
+ 	 	 	 	 	"trans": "升級保險箱",
  	 	 	 	 	"eng": "Upgrade Vault"
  	 	 	 	},
  	 	 	 	"confirm": {
@@ -258,7 +258,7 @@
  	 	 	 	}
  	 	 	},
  	 	 	"noBalance": {
- 	 	 	 	"trans": "當你沒有餘額時，你不能進行提款。",
+ 	 	 	 	"trans": "餘額不足，無法進行提款。",
  	 	 	 	"eng": "You can't withdraw when you have no balance."
  	 	 	}
  	 	},
@@ -377,11 +377,11 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"name"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "${name}即將在幾秒鐘內用完！",
+ 	 	 	 	 	"trans": "${name}即將在幾秒鐘內結束！",
  	 	 	 	 	"eng": "${name} is about to run out in a few seconds!"
  	 	 	 	},
  	 	 	 	"refresh": {
- 	 	 	 	 	"trans": "刷新",
+ 	 	 	 	 	"trans": "重新整理",
  	 	 	 	 	"eng": "Refresh Now"
  	 	 	 	}
  	 	 	}
@@ -402,7 +402,7 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"cost"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "當您屬於公會時，將啟用公會聊天。",
+ 	 	 	 	 	"trans": "公會聊天將於加入公會後開啟。",
  	 	 	 	 	"eng": "gang chat will be enabled when you belong to a gang.\\njoin a gang by making friends in global chat or create your own gang and invite your friends!"
  	 	 	 	},
  	 	 	 	"createButton": {
@@ -455,7 +455,7 @@
  	 	 	 	}
  	 	 	},
  	 	 	"lowPrintLevelTip2": {
- 	 	 	 	"trans": "透過列印更多快取記憶體來增加你的分子列印級別，以打造更強大的武器",
+ 	 	 	 	"trans": "透過列印更多快取記憶體來增加你的分子列印級別，打造更強大的武器",
  	 	 	 	"eng": "Increase your Printing Rank to create more powerful weapons by printing more caches"
  	 	 	},
  	 	 	"lowPrintLevelTip3": {
@@ -581,7 +581,7 @@
  	 	},
  	 	"list": {
  	 	 	"longPressToMultiSelect": {
- 	 	 	 	"trans": "長按以選擇多個項目",
+ 	 	 	 	"trans": "長按選擇多個項目",
  	 	 	 	"eng": "Long press to multi-select"
  	 	 	}
  	 	},
@@ -809,7 +809,7 @@
  	 	},
  	 	"npc": {
  	 	 	"notUnlocked": {
- 	 	 	 	"trans": "這尚未解鎖，請嘗試升級你的角色",
+ 	 	 	 	"trans": "尚未解鎖，請嘗試升級你的角色",
  	 	 	 	"eng": "This is not unlocked yet, try leveling up your character"
  	 	 	},
  	 	 	"repairItems": {
@@ -1125,7 +1125,7 @@
  	 	 	 	"eng": "Are you sure you want to abort?"
  	 	 	},
  	 	 	"abortWarning": {
- 	 	 	 	"trans": "中止此行為將不會收到任何獎勵，且消耗的材料將不歸還",
+ 	 	 	 	"trans": "中止此行為將不會收到任何獎勵，且消耗的材料將不被歸還",
  	 	 	 	"eng": "By aborting this you won\\'t receive any reward and the material used won\\'t be returned"
  	 	 	}
  	 	},
@@ -1308,7 +1308,7 @@
  	 	},
  	 	"travel": {
  	 	 	"notUnlocked": {
- 	 	 	 	"trans": "你尚未解鎖這個區域",
+ 	 	 	 	"trans": "尚未解鎖這個區域",
  	 	 	 	"eng": "You have not unlocked this area yet"
  	 	 	}
  	 	},
@@ -1567,7 +1567,7 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"cost"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "分配公會官階將花費您${cost} BTC，並需要重新啟動遊戲才能查看更改",
+ 	 	 	 	 	"trans": "分配公會官階將花費您${cost} BTC，重新啟動遊戲後才會套用",
  	 	 	 	 	"eng": "Assigning a gang rank will cost you ${cost} btc and require game restart to see the change"
  	 	 	 	},
  	 	 	 	"input": {
@@ -1899,7 +1899,7 @@
  	 	},
  	 	"combat": {
  	 	 	"enemyIsDeadTitle": {
- 	 	 	 	"trans": "你在這裡什麼也沒找到",
+ 	 	 	 	"trans": "你什麼也沒找到",
  	 	 	 	"eng": "You found nothing here"
  	 	 	},
  	 	 	"equipmentBrokenMsg": {
