--- a/contribution/lang/ru.json
+++ b/contribution/lang/ru.json
@@ -842,7 +842,7 @@
  	 	 	},
  	 	 	"buyUnit": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Купить Units",
+ 	 	 	 	 	"trans": "Купить Юниты",
  	 	 	 	 	"eng": "Buy Unit"
  	 	 	 	}
  	 	 	}
@@ -3371,7 +3371,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"unit"
  	 	 	 	],
- 	 	 	 	"trans": "${unit} Юнитов",
+ 	 	 	 	"trans": "${unit} Юнит(ов)",
  	 	 	 	"eng": "${unit} Unit"
  	 	 	},
  	 	 	"description": {
@@ -3379,7 +3379,7 @@
  	 	 	 	 	"unit",
  	 	 	 	 	"bonus"
  	 	 	 	],
- 	 	 	 	"trans": "Получено ${unit} Юнитов (${bonus} бонус)",
+ 	 	 	 	"trans": "Получено ${unit} Юнит(ов) (${bonus} бонус(ов))",
  	 	 	 	"eng": "Receive ${unit} Unit (${bonus} bonus)"
  	 	 	}
  	 	},
@@ -3388,7 +3388,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"unit"
  	 	 	 	],
- 	 	 	 	"trans": "${unit} Юнит",
+ 	 	 	 	"trans": "${unit} Юнит(ов)",
  	 	 	 	"eng": "${unit} Unit"
  	 	 	}
  	 	},
@@ -3397,7 +3397,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"unit"
  	 	 	 	],
- 	 	 	 	"trans": "${unit} Юнит",
+ 	 	 	 	"trans": "${unit} Юнит(ов)",
  	 	 	 	"eng": "${unit} Unit"
  	 	 	},
  	 	 	"description": {
@@ -3405,7 +3405,7 @@
  	 	 	 	 	"unit",
  	 	 	 	 	"bonus"
  	 	 	 	],
- 	 	 	 	"trans": "Получи ${unit} Юнитов (${bonus} бонус)",
+ 	 	 	 	"trans": "Получи ${unit} Юнит(ов) (${bonus} бонус(ов))",
  	 	 	 	"eng": "Receive ${unit} Unit (${bonus} bonus)"
  	 	 	}
  	 	},
@@ -3414,7 +3414,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"unit"
  	 	 	 	],
- 	 	 	 	"trans": "${unit} Юнит",
+ 	 	 	 	"trans": "${unit} Юнит(ов)",
  	 	 	 	"eng": "${unit} Unit"
  	 	 	},
  	 	 	"description": {
@@ -3422,7 +3422,7 @@
  	 	 	 	 	"unit",
  	 	 	 	 	"bonus"
  	 	 	 	],
- 	 	 	 	"trans": "Получи ${unit} Юнитов (${bonus} бонус)",
+ 	 	 	 	"trans": "Получи ${unit} Юнит(ов) (${bonus} бонус(ов))",
  	 	 	 	"eng": "Receive ${unit} Unit (${bonus} bonus)"
  	 	 	}
  	 	},
@@ -3431,7 +3431,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"unit"
  	 	 	 	],
- 	 	 	 	"trans": "${unit} Юнит",
+ 	 	 	 	"trans": "${unit} Юнит(ов)",
  	 	 	 	"eng": "${unit} Unit"
  	 	 	},
  	 	 	"description": {
@@ -3439,7 +3439,7 @@
  	 	 	 	 	"unit",
  	 	 	 	 	"bonus"
  	 	 	 	],
- 	 	 	 	"trans": "Получи ${unit} Юнитов (${bonus} бонус)",
+ 	 	 	 	"trans": "Получи ${unit} Юнит(ов) (${bonus} бонус(ов))",
  	 	 	 	"eng": "Receive ${unit} Unit (${bonus} bonus)"
  	 	 	}
  	 	},
@@ -3448,7 +3448,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"unit"
  	 	 	 	],
- 	 	 	 	"trans": "${unit} Юнит",
+ 	 	 	 	"trans": "${unit} Юнит(ов)",
  	 	 	 	"eng": "${unit} Unit"
  	 	 	},
  	 	 	"description": {
@@ -3456,7 +3456,7 @@
  	 	 	 	 	"unit",
  	 	 	 	 	"bonus"
  	 	 	 	],
- 	 	 	 	"trans": "Получи ${unit} Юнитов (${bonus} бонус)",
+ 	 	 	 	"trans": "Получи ${unit} Юнит(ов) (${bonus} бонус(ов))",
  	 	 	 	"eng": "Receive ${unit} Unit (${bonus} bonus)"
  	 	 	}
  	 	},
@@ -3465,7 +3465,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"unit"
  	 	 	 	],
- 	 	 	 	"trans": "${unit} Юнит",
+ 	 	 	 	"trans": "${unit} Юнит(ов)",
  	 	 	 	"eng": "${unit} Unit"
  	 	 	},
  	 	 	"description": {
@@ -3473,7 +3473,7 @@
  	 	 	 	 	"unit",
  	 	 	 	 	"bonus"
  	 	 	 	],
- 	 	 	 	"trans": "Получи ${unit} Юнитов (${bonus} бонус)",
+ 	 	 	 	"trans": "Получи ${unit} Юнит(ов) (${bonus} бонус(ов))",
  	 	 	 	"eng": "Receive ${unit} Unit (${bonus} bonus)"
  	 	 	}
  	 	},
@@ -3482,7 +3482,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"unit"
  	 	 	 	],
- 	 	 	 	"trans": "${unit} Юнит",
+ 	 	 	 	"trans": "${unit} Юнит(ов)",
  	 	 	 	"eng": "${unit} Unit"
  	 	 	},
  	 	 	"description": {
@@ -3490,7 +3490,7 @@
  	 	 	 	 	"unit",
  	 	 	 	 	"bonus"
  	 	 	 	],
- 	 	 	 	"trans": "Получи ${unit} Юнитов (${bonus} бонус)",
+ 	 	 	 	"trans": "Получи ${unit} Юнит(ов) (${bonus} бонус(ов))",
  	 	 	 	"eng": "Receive ${unit} Unit (${bonus} bonus)"
  	 	 	}
  	 	},
@@ -3499,7 +3499,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"unit"
  	 	 	 	],
- 	 	 	 	"trans": "${unit} Юнит",
+ 	 	 	 	"trans": "${unit} Юнит(ов)",
  	 	 	 	"eng": "${unit} Unit"
  	 	 	},
  	 	 	"description": {
@@ -3507,7 +3507,7 @@
  	 	 	 	 	"unit",
  	 	 	 	 	"bonus"
  	 	 	 	],
- 	 	 	 	"trans": "Получи ${unit} Юнитов (${bonus} бонус)",
+ 	 	 	 	"trans": "Получи ${unit} Юнит(ов) (${bonus} бонус(ов))",
  	 	 	 	"eng": "Receive ${unit} Unit (${bonus} bonus)"
  	 	 	}
  	 	}
@@ -3580,7 +3580,7 @@
  	 	 	"eng": "Prestige"
  	 	},
  	 	"donation9": {
- 	 	 	"trans": "Престиж",
+ 	 	 	"trans": "Кибер Кролик",
  	 	 	"eng": "CyberBunny"
  	 	},
  	 	"donation10": {
@@ -3588,19 +3588,19 @@
  	 	 	"eng": "Prestige"
  	 	},
  	 	"donation11": {
- 	 	 	"trans": "Киберкитти",
+ 	 	 	"trans": "Кибер Котенок",
  	 	 	"eng": "CyberKitty"
  	 	},
  	 	"donation12": {
- 	 	 	"trans": "Cybersanta",
+ 	 	 	"trans": "Кибер Санта",
  	 	 	"eng": "CyberSanta"
  	 	},
  	 	"donation13": {
- 	 	 	"trans": "Киберфрост",
+ 	 	 	"trans": "Кибер Мороз",
  	 	 	"eng": "CyberFrost"
  	 	},
  	 	"donation14": {
- 	 	 	"trans": "Кибердугон",
+ 	 	 	"trans": "Кибер Дракон",
  	 	 	"eng": "Cyberdragon"
  	 	},
  	 	"donation15": {
@@ -3760,11 +3760,11 @@
  	 	 	 	 	"eng": "Potato Framed Profile (with animation)"
  	 	 	 	},
  	 	 	 	"7": {
- 	 	 	 	 	"trans": "Возможность указания биографии",
+ 	 	 	 	 	"trans": "Возможность изменения биографии",
  	 	 	 	 	"eng": "Unlock custom bio"
  	 	 	 	},
  	 	 	 	"8": {
- 	 	 	 	 	"trans": "Украшение штрих-код в профиле",
+ 	 	 	 	 	"trans": "Украшение штрих-кодом в профиле",
  	 	 	 	 	"eng": "Barcode decoration on profile"
  	 	 	 	},
  	 	 	 	"9": {
@@ -6627,11 +6627,11 @@
  	 	 	 	"vars": [
  	 	 	 	 	"amount"
  	 	 	 	],
- 	 	 	 	"trans": "Вы собираетесь пожертвовать ${amount} Unit из вашей учетной записи",
+ 	 	 	 	"trans": "Вы собираетесь пожертвовать ${amount} Юнит(ов) из вашей учетной записи",
  	 	 	 	"eng": "This will donate ${amount} Unit from your account"
  	 	 	},
  	 	 	"notEnough": {
- 	 	 	 	"trans": "Тебе не хватает Unit, чтобы пожертвовать.",
+ 	 	 	 	"trans": "Тебе не хватает Юнитов, чтобы пожертвовать.",
  	 	 	 	"eng": "You do not have enough Unit to donate."
  	 	 	}
  	 	},
@@ -7099,7 +7099,7 @@
  	 	 	"eng": "Refer your friends to get amazing rewards!"
  	 	},
  	 	"desc1": {
- 	 	 	"trans": "Бесплатные Units*",
+ 	 	 	"trans": "Бесплатные Юниты*",
  	 	 	"eng": "Free Unit*"
  	 	},
  	 	"desc2": {
@@ -7121,7 +7121,7 @@
  	 	 	}
  	 	},
  	 	"footnote1": {
- 	 	 	"trans": "*Ты получишь 10% от суммы покупки твоего друга.",
+ 	 	 	"trans": "*Ты получишь 10% бонусных Юнитов от суммы покупки твоего друга.",
  	 	 	"eng": "*you get 10% bonus unit whenever your friend purchases unit"
  	 	},
  	 	"footnote2": {
@@ -7259,7 +7259,7 @@
  	 	 	"vars": [
  	 	 	 	"price"
  	 	 	],
- 	 	 	"trans": "${price} единица",
+ 	 	 	"trans": "${price} Юнит(ов)",
  	 	 	"eng": "${price} Unit"
  	 	},
  	 	"unitPriceDiscountEndDate": {
@@ -7345,7 +7345,7 @@
  	 	 	 	 	"playerName",
  	 	 	 	 	"price"
  	 	 	 	],
- 	 	 	 	"trans": "Отправить подписку \"${donationName}\" стоимостью ${price} Unit игроку \"${playerName}\"?",
+ 	 	 	 	"trans": "Отправить подписку \"${donationName}\" стоимостью ${price} Юнит(ов) игроку \"${playerName}\"?",
  	 	 	 	"eng": "Send ${donationName} donation chat frame (cost ${price} Unit) to player \"${playerName}\"?"
  	 	 	},
  	 	 	"description": {
@@ -7373,7 +7373,7 @@
  	 	 	"vars": [
  	 	 	 	"price"
  	 	 	],
- 	 	 	"trans": "${price} единица",
+ 	 	 	"trans": "${price} Юнит(ов)",
  	 	 	"eng": "${price} Unit"
  	 	},
  	 	"donationDescription": {
@@ -7403,7 +7403,7 @@
  	 	 	 	 	"playerName",
  	 	 	 	 	"price"
  	 	 	 	],
- 	 	 	 	"trans": "Отправить эмблему стоимостью ${price} Unit игроку \"${playerName}\"?",
+ 	 	 	 	"trans": "Отправить эмблему стоимостью ${price} Юнит(ов) игроку \"${playerName}\"?",
  	 	 	 	"eng": "Send emblem (cost ${price} Unit) to player \"${playerName}\"?"
  	 	 	},
  	 	 	"description": {
